[tool.poetry]
name = "how-to-use-git"
version = "0.1.0"
description = ""
authors = ["Ilia Kaziamov <ilya.kazyamov@gmail.com>"]
readme = "README.md"
packages = [{include = "how_to_use_git"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
